# cadran

./: CLAUDE.md  Cargo.toml  Info.plist  LICENSE  README.md  dev.yml
.github/workflows/: bundle.yml  ci.yml  release.yml
docs/milestone-1/: plan.md  technical-decisions.md
docs/timezone-search/: plan.md
scripts/: bundle-app.sh  codesign-app.sh  generate-icons.sh
src/: main.rs  preferences.rs  resolver.rs  search.rs  settings.rs  timezone.rs
