[package]
name = "cadran"
version = "0.1.0"
edition = "2024"

[dependencies]
jiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
objc2 = "0.6"
objc2-core-foundation = { version = "0.3", default-features = false }
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSArray",
    "NSAttributedString",
    "NSDate",
    "NSDictionary",
    "NSNotification",
    "NSObject",
    "NSString",
    "NSThread",
    "NSTimer",
    "NSUserDefaults",
    "objc2-core-foundation",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "NSApplication",
    "NSButton",
    "NSButtonCell",
    "NSCell",
    "NSComboBox",
    "NSControl",
    "NSGraphics",
    "NSLayoutConstraint",
    "NSColor",
    "NSFont",
    "NSMenu",
    "NSMenuItem",
    "NSText",
    "NSResponder",
    "NSRunningApplication",
    "NSScrollView",
    "NSStackView",
    "NSStatusBar",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSTextField",
    "NSTextFieldCell",
    "NSUserInterfaceLayout",
    "NSView",
    "NSWindow",
    "objc2-core-foundation",
] }
